# hotfunc

./: LICENSE.txt  README.md  hotfunc.py  pyproject.toml  test_hotfunc.py
